2004-04-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: ggv has been branched.

2004-04-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-mag has been branched.

2004-04-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-terminal has been branched.

2004-04-04  Dafydd Harries  <daf@muse.19inch.net>

	* translation-status.xml: gedit has been branched for GNOME 2.6.

2004-04-02  Dafydd Harries  <daf@muse.19inch.net>

	* translation-status.xml: nautilus-cd-burner has been branched.

2004-03-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-vfs has been branched.

2004-03-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gcalctool has been branched.

2004-03-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: at-spi has been branched.

2004-03-25  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: dasher has been branched.

2004-03-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: yelp has been branched.

2004-03-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-themes has been branched.

2004-03-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: epiphany-extensions has been branched.

2004-03-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnomemeeting has been branched.

2004-03-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-netstatus has been branched.

2004-03-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: epiphany has been branched.

2004-03-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-games has been branched.

2004-03-05  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Readd gnome-desktop (result of my
	mistake long time ago).

2004-03-05  Abel Cheung  <maddog@linux.org.hk>

	* ignore-lang-list: Added "zh_HK" temporarily.
