@@ -2114,17 +2114,6 @@
       </component>
     </version>
   </module>
-  <module name="nautilus-mozilla">
-    <version release="gnome-2.6">
-      <component name="nautilus-mozilla" dir="nautilus-mozilla" group="extras">
-        <podir dir="po"/>
-        <potname name="nautilus-mozilla.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-  </module>
   <module name="nautilus-rc">
     <version release="gnome-2.6">
       <component name="nautilus-rc" dir="nautilus-rc" group="extras">
