@@ -1,3 +1,9 @@
+2004-04-08  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Removed nautilus-mozilla.
+	Presumably dead module -- no non-translator activity for
+	two years.
+
 2004-04-07  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: ggv has been branched.
